<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="60dp"
              android:gravity="center_vertical"
              android:orientation="horizontal"
              android:paddingLeft="5dp">

    <ImageView
        android:id="@+id/deviceIcon_imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="?attr/colorPrimary"
        android:contentDescription="@string/des_deviceIcon"
        android:src="@mipmap/ic_device"/>

    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/deviceName_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/device_name"
            android:textColor="@color/colorDarkText"/>

        <TextView
            android:id="@+id/deviceLoginTime_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/login_time"
            android:textColor="@color/colorLightText"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/newMessageNumber_textView"
            android:layout_width="30dp"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_marginRight="10dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/deviceState_textView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/device_state"
                android:textColor="#4067b9"/>

            <TextView
                android:id="@+id/lastMessageTime_textView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/lastMessageTime"
                android:textColor="@color/colorLightText"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>