<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main_drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <include layout="@layout/bottombar_in_main_activity"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/left_drawerLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#fff"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/userAvatar_ImageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/des_userAvatar"
                android:src="@drawable/avatar"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/user_name"
                    android:textColor="@color/colorDarkText"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/user_state"
                    android:textColor="@color/colorLightText"
                    android:textSize="15sp"/>

            </LinearLayout>

        </LinearLayout>

        <ExpandableListView
            android:id="@+id/drawerItems_expandableListView"
            android:layout_width="250dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</android.support.v4.widget.DrawerLayout>
